# GCtfFind

./: CCtfFindMain.cpp  CCtfPackage.cpp  CFindSeriesCtfs.cpp  CInput.cpp  CInputFolder.cpp  CLoadAngFile.cpp  CMainInc.h  CMakeLists.txt  CProcessMain.cpp  CProcessThread.cpp  CSaveCtfFile.cpp  CSaveCtfResults.cpp  README.md  Readme.txt  makefile  makefile10
App/: CAppInc.h  CAvgFFT.cpp  CRotAvg.cpp
FindCTF/: CCTFTheory.cpp  CCalcBackground.cpp  CFindCTFInc.h  CFindCtf1D.cpp  CFindCtf2D.cpp  CFindCtfBase.cpp  CFindCtfHelp.cpp  CFindDefocus1D.cpp  CFindDefocus2D.cpp  CGenAvgSpectrum.cpp  CRescaleImage.cpp  CSpectrumImage.cpp  GCC1D.cu  GCC2D.cu  GCalcCTF1D.cu  GCalcCTF2D.cu  GCalcSpectrum.cu  GCalcSpectrum2D.cu  GLowpass2D.cu  GRadialAvg.cu  GRemoveMean.cu  GRmBackground2D.cu  GRoundEdge.cu  GSpectralCC2D.cu
MrcUtil/: CAsyncSaveImages.cpp  CAsyncSingleSave.cpp  CLoadImages.cpp  CMrcStack.cpp  CMrcUtilInc.h  CSaveImages.cpp  CSplitImage.cpp
Util/: CCudaHelper.cpp  CCufft2D.cpp  CParseArgs.cpp  CRegSpline.cpp  CRegSpline2.cpp  CRegSpline3.cpp  CSaveTempMrc.cpp  CSimpleFuncs.cpp  CUtilInc.h  GAddImages.cu  GCalcMoment2D.cu  GFtResize2D.cu  GNormalize2D.cu  GThreshold2D.cu
